# Netology-SQL

clients_task1/: CMakeLists.txt  main.cpp  sql_class.cpp  sql_class.h
employees/: Script-2.sql
music-site-2/: INSERT.sql  Script-1.sql  Task2-SELECT.sql  Task3-SELECT.sql  Task4-SELECT.sql
orm_task1_task2/: CMakeLists.txt  main.cpp
orm_task1_task2/lib/: book.cpp  book.h  db.cpp  db.h  publisher.cpp  publisher.h  sale.cpp  sale.h  shop.cpp  shop.h  stock.cpp  stock.h
